# btrbk-panel

./: .envrc  .gitignore  PKGBUILD  btrbk-panel.sh  main.py  pyproject.toml
src/btrbk_panel/: app.py  btrbk-helper  btrbk-panel.desktop  btrbk-panel.sh  btrbk.py  cli.py  linux.py  model.py  presenter.py  state.py
